Error corrections done

--- a/index.html
+++ b/index.html
@@ -16,24 +16,27 @@
 
   <main>
     <div id="container">
-      <div id="date">
-        <div id="day">
-          <label for="iday" id="dlabel">Day</label>
-          <input type="number" name="day" id="iday" placeholder="DD">
-          <span id="drequired">This field is required</span>
-        </div>
+      <form action="">
+        <div id="date">
 
-        <div id="month">
-          <label for="imonth" id="mlabel">Month</label>
-          <input type="number" name="day" id="imonth" placeholder="MM">
-          <span id="mrequired">This field is required</span>
-        </div>
+          <div id="day">
+            <label for="iday" id="dlabel">Day</label>
+            <input type="number" name="day" id="iday" placeholder="DD">
+            <span id="drequired">This field is required</span>
+          </div>
 
-        <div id="year">
-          <label for="iyear"  id="ylabel">Year</label>
-          <input type="number" name="day" id="iyear" placeholder="YYYY">
-          <span id="yrequired">This field is required</span>
-        </div>
+          <div id="month">
+            <label for="imonth" id="mlabel">Month</label>
+            <input type="number" name="day" id="imonth" placeholder="MM">
+            <span id="mrequired">This field is required</span>
+          </div>
+
+          <div id="year">
+            <label for="iyear"  id="ylabel">Year</label>
+            <input type="number" name="day" id="iyear" placeholder="YYYY">
+            <span id="yrequired">This field is required</span>
+          </div>
+      </form>
       </div>
       
       <div id="contImg">
@@ -55,7 +58,7 @@
           </div>
 
           <div class="resdate">
-            <p><span  id="resyear">--</span> days</p>
+            <p><span  id="resyear">--</span> days<p>
           </div>
         </div>
       </div>
