trying to solve an error

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div id="res">
         <div id="born">
           <div class="resdate">
-            <p><span id="resday">--</span> years</p>
+            <p><span id="resyear">--</span> years</p>
           </div>
           
           <div class="resdate">
@@ -58,7 +58,7 @@
           </div>
 
           <div class="resdate">
-            <p><span  id="resyear">--</span> days<p>
+            <p><span  id="resday">--</span> days<p>
           </div>
         </div>
       </div>
