--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
   
-  <title>Frontend Mentor | Age calculator app</title>
+  <title>Age calculator app</title>
   <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
